--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -13,6 +13,7 @@ django-picklefield==3.2
 django-q==1.3.9
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-nested-routers==0.94.1
 gunicorn==21.2.0
 idna==3.7
 jinxed==1.2.1
